--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -1,5 +1,5 @@
 <% content_for :halo4, true %>
-<% content_for :title, 'Halo 4 - iBotPeaches v5 - Big Team Slayer on Valhalla' %>	
+<% content_for :title, 'Halo 4 - iBotPeaches v5 - Capture The Flag on Valhalla' %>	
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'game_history' %>
 <% content_for :halo4_game_history_active, @css_class %>
