oops, needed to push that css too

--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -109,6 +109,13 @@ body.halo4_game_history {
 						}
 					}
 				}
+
+				.tab-pane {
+					> .click-helper {
+						color: #aaa;
+						font-size: 15px;
+					}
+				}
 			}
 		}
 	}
