Template for carnage data

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -196,6 +196,23 @@ $('.player-linker').click(function(e) {
 						<div class="tab-pane fade in" id="carnage">
 							<span class="click-helper">* Click a players name to get their carnage report.</span>
 							<hr />
+
+							<h2 class="owner">'s Carnage</h2>
+							<table>
+								<thead>
+									<tr>
+										<th>Weapon</th>
+										<th>Kills</th>
+										<th>Headshots</th>
+										<th>Deaths</th>
+										<th>Penalties</th>
+										<th>Spread</th>
+									</tr>
+								</thead>
+								<tbody>
+									
+								</tbody>
+							</table>
 						</div>
 						<div class="tab-pane fade in" id="medals">
 							<span class="click-helper">* Click a players name to get their medal report.</span>
