Added default branch view stuff

--- a/app/views/user/user/new.html.erb
+++ b/app/views/user/user/new.html.erb
@@ -1,2 +1,11 @@
-<h1>User::User#new</h1>
-<p>Find me in app/views/user/user/new.html.erb</p>
+<% content_for :user, true %>
+<% content_for :title, 'Register' %>	
+<% content_for :has_footer, true %>
+<% content_for :scripts do %>
+<script>
+</script>
+<% end %>
+<% content_for :template, 'user user_register' %>
+
+<div class="container">
+</div>
