--- a/app/views/user/user/new.html.erb
+++ b/app/views/user/user/new.html.erb
@@ -7,5 +7,15 @@
 <% end %>
 <% content_for :template, 'user user_register' %>
 
-<div class="container">
+<div class="bs-header register-header" id="content">
+	<div class="container">
+		<h1>Join Branch</h1>
+		<p>And get access to shit I have yet to think of.</p>
+
+		<div class="holy-shit-people hidden-xs">
+			<div class="player a" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Swainooooo/h4/spartans/fullbody?target=large)"></div>
+			<div class="player b" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Doofette/h4/spartans/fullbody?target=large)"></div>
+			<div class="player c" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Pr0gram/h4/spartans/fullbody?target=large)"></div>
+		</div>
+	</div>
 </div>
