--- a/app/assets/stylesheets/user/user.css.scss
+++ b/app/assets/stylesheets/user/user.css.scss
@@ -1,3 +1,50 @@
 body.user_register {
 
+	.register-header {
+		height: 350px;
+
+		> .container > .holy-shit-people {
+
+			position: absolute;
+			top: -40px;
+			right: 0;
+			width: 460px;
+			height: 360px;
+
+			> .player {
+				background-repeat: no-repeat;
+				position: absolute;
+				background-size: cover;
+
+				&.a {
+					top: 33px;
+					right: 91px;
+					z-index: 1000;
+					height: 327px;
+					width: 182px;
+				}
+				&.b {
+					top: 144px;
+					right: 4px;
+					z-index: 999;
+					width: 121px;
+					height: 216px;
+				}
+				&.c {
+					top: 161px;
+					right: 217px;
+					z-index: 998;
+					width: 111px;
+					height: 199px;
+
+					-moz-transform: scaleX(-1);
+					-o-transform: scaleX(-1);
+					-webkit-transform: scaleX(-1);
+					transform: scaleX(-1);
+					filter: FlipH;
+					-ms-filter: "FlipH";
+				}
+			}
+		}
+	}
 }
