--- a/app/views/user/user/new.html.erb
+++ b/app/views/user/user/new.html.erb
@@ -6,7 +6,7 @@
 
 $(document).ready(function() {
 
-	// Username Fullname
+	// Full Name Fullname
 	$('.full-name-section > div > .input-group > input').on('input', function() {
 		var data = $('.full-name-section > div > .input-group > input').val();
 		var invalid = false;
