--- a/app/views/user/user/new.html.erb
+++ b/app/views/user/user/new.html.erb
@@ -168,6 +168,12 @@ $(document).ready(function() {
 						</div>
 					</div>
 				</section>
+
+				<hr />
+
+				<section class="input-section submit row">
+					<input type="submit" class="btn btn-primary btn-large" value="Sign Up" />
+				</section>
 			</div>
 		</div>
 	</div>
