proper html5 naming

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,9 +97,9 @@
 			</div>
 		</header>
 
-		<article>
+		<main>
 			<%= yield %>
-		</article>
+		</main>
 
 		<% if content_for? :has_footer %>
 			<footer class="bs-footer" role="contentinfo">
