--- a/app/views/user/account/home/index.html.erb
+++ b/app/views/user/account/home/index.html.erb
@@ -8,3 +8,21 @@
 </script>
 <% end %>
 <% content_for :template, 'account account_home' %>
+
+<%= render partial: 'user/account/partials/header' %>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-3">
+			<%= render partial: 'user/account/partials/sidebar' %>
+		</div>
+
+		<div class="col-md-9">
+			<div class="bs-branch-section overview">
+				<div class="page-header">
+					<h1>Overview</h1>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
