--- a/app/views/user/account/friends/index.html.erb
+++ b/app/views/user/account/friends/index.html.erb
@@ -18,10 +18,28 @@
 		</div>
 
 		<div class="col-md-9">
-			<div class="bs-branch-section overview">
+			<div class="bs-branch-section friends">
 				<div class="page-header">
 					<h1>Friends</h1>
 				</div>
+
+				<% 10.times do |i| %>
+					<div class="row friend-entry">
+						<div class="col-md-12">
+							<h2>
+								<%= link_to 'Xerax', user_view_path(username: 'xerax') %>
+							</h2>
+							<h3>Alex Reed</h3>
+							<ul class="no-style inline">
+								<li><span class="label label-success">Developer</span></li>
+								<li><span class="label label-info">Halo 4</span></li>
+								<li><span class="label label-info">Halo Reach</span></li>
+								<li><span class="label label-info">Halo 3</span></li>
+							</ul>
+						</div>
+					</div>
+					<hr />
+				<% end %>
 			</div>
 		</div>
 	</div>
