--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,24 +107,27 @@
 					<div class="row">
 						<div class="col-md-10">
 							<p>Designed and Developed by <a href="http://twitter.com/alexerax" target="_blank">@alexerax</a>.</p>
+							<p>Baked with <a href="http://getbootstrap.com/">Bootstrap</a>. Thanks Guys.</p>
 							<p>Code licensed under the <a href="http://www.dbad-license.org/" target="_blank">Don't Be A Dick</a> Public License.</p>
 							<ul class="footer-links">
+								<li><a href="https://github.com/TheTree/Branch" target="_blank">Github</a></li>
+								<li class="muted">·</li>
 								<li><a href="http://xboxchaos.com/" target="_blank">Xbox Chaos</a></li>
 								<li class="muted">·</li>
-								<li><a href="http://halo.reddit.com/" target="_blank">Halo Reddit</a></li>
+								<li><a href="http://halo.reddit.com/" target="_blank">r/halo</a></li>
 								<li class="muted">·</li>
-								<li><a href="http://halowaypoint.com" target="_blank">Halo Waypoint</a></li>
+								<li><a href="http://halocommand.com" target="_blank">Halo Command</a></li>
+								<li class="muted">·</li>
+								<li><a href="http://onyx.sx" target="_blank">Onyx</a></li>
 								<li class="muted">·</li>
 								<li><a href="/blog/" target="_blank">Blog</a></li>
-								<li class="muted">·</li>
-								<li><a href="https://github.com/TheTree/Branch" target="_blank">Github</a></li>
 							</ul>
 						</div>
 
 						<div class="col-md-2 hidden-xs hidden-sm">
 							<%= image_tag("uk-map.png", { width: '60', height: '77' }) %>
 							<br>
-							<!-- <span class="made-in">Made in the UK</span> - fuck this line -->
+							<!-- <span class="made-in">Made in the UK</span> - fuck this line, too hipster -->
 						</div>
 					</div>
 				</div>
