--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,12 +73,12 @@
 								</div>
 							</form>
 						</li>
-						<% if true %>
+						<% if current_user %>
 						<li class="dropdown <%= 'active' if content_for? :user %>">
-							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Xerax <b class="caret"></b></a>
+							<a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.username %> <b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li>
-									<%= link_to 'View Profile', user_view_path('xerax') %>
+									<%= link_to 'View Profile', user_view_path(current_user.username) %>
 								</li>
 
 								<li class="divider"></li>
@@ -88,7 +88,7 @@
 							</ul>
 						</li>
 						<% else %>
-						<li>
+						<li class="<%= 'active' if content_for? :user %>">
 							<%= link_to 'Sign In', :user_signin %>
 						</li>
 						<% end %>
