--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
 
 								<li class="divider"></li>
 								<li>
-									<%= link_to 'Sign Out', '#' %>
+									<%= link_to 'Sign Out', user_signout_path %>
 								</li>
 							</ul>
 						</li>
