Welcome page says your username

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 
 <div class="bs-header welcome-header" id="content">
 	<div class="container">
-		<h1>Welcome to Branch, Xerax</h1>
+		<h1>Welcome to Branch, <%= current_user.username %></h1>
 		<p>Detailed Halo Stats. Designed and Built with the community in mind.</p>
 
 		<ul class="project-stats" style="display: none;">
