Added proper sessions with remember me option

--- a/app/assets/stylesheets/user/session.css.scss
+++ b/app/assets/stylesheets/user/session.css.scss
@@ -4,6 +4,16 @@ body.session {
 
 body.session_signin {
 	.details {
+		> .remember-me-section {
+			margin-top: -20px !important;
+
+			> div > .input-group > .checkbox-pair {
+				font-size: 14px;
+				font-weight: 600;
+				margin-left: 10px;
+			}
+		}
+
 		> .submit {
 			margin: 10px !important;
 			> ul {
