--- a/app/views/user/session/new.html.erb
+++ b/app/views/user/session/new.html.erb
@@ -44,6 +44,15 @@
 						</div>
 					</section>
 
+					<section class="input-section remember-me-section row">
+						<div class="col-md-6">
+							<div class="input-group">
+								<input name="login[rememberme]" id="login_rememberme" type="checkbox" checked="checked" />
+								<span class="checkbox-pair">Remember Me</span>
+							</div>
+						</div>
+					</section>
+
 					<hr />
 
 					<section class="input-section submit row">
