--- a/app/views/user/settings/session/index.html.erb
+++ b/app/views/user/settings/session/index.html.erb
@@ -3,6 +3,7 @@
 <% content_for :has_footer, true %>
 <% content_for :setting_active, 'session' %>
 <% content_for :scripts do %>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 <script>
 </script>
 <% end %>
