--- a/app/views/user/settings/session/index.html.erb
+++ b/app/views/user/settings/session/index.html.erb
@@ -5,6 +5,28 @@
 <% content_for :scripts do %>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 <script>
+$(document).ready(function() {
+	google.maps.visualRefresh = true;
+
+	<% @sessions.each do |session| %>
+		<% 
+			stuff = session.gps_loc.split(',')
+			lat = stuff[0]
+			lng = stuff[1]
+		%>
+		var sessionPosition = new google.maps.LatLng(<%= lat %>, <%= lng %>);
+		var mapOptions = {
+			zoom: 12,
+			center: sessionPosition,
+    		disableDefaultUI: true,
+			mapTypeId: google.maps.MapTypeId.ROADMAP
+		};
+		new google.maps.Marker({
+			position: sessionPosition,
+			map: new google.maps.Map(document.getElementById('map-<%= session.id %>'), mapOptions)
+		});
+	<% end %>
+});
 </script>
 <% end %>
 <% content_for :template, 'account settings settings_session' %>
@@ -23,6 +45,30 @@
 					<h1>Sessions</h1>
 				</div>
 
+				<% @sessions.each do |user_session| %>
+					<div class="row entry">
+						<div class="col-md-12 session">
+							<div class="map" id="map-<%= user_session.id %>"></div>
+							<div class="mask">
+								<div class="inner-content">
+									<h2><%= user_session.location %></h2>
+									<span class="ip"><%= user_session.owner_ip %></span>
+									<hr />
+									<span class="browser">Browser: <strong><%= user_session.browser %></strong></span> <br />
+									<span class="os">Operating System: <strong><%= user_session.platform %></strong></span> <br />
+									<%= form_for :session, url: :settings_session_destroy, method: :delete do |f| %>
+										<%= hidden_field(:session, :sid, value: user_session.id) %>
+										<% if request.session[:session_id] == user_session.identifier %>
+											<%= f.submit('Murder Primary Session', class: 'btn btn-danger btn-large', confirm: 'This is your current session, killing this will sign you out.') %>
+										<% else %>
+											<%= f.submit('Murder Session', class: 'btn btn-danger btn-large') %>
+										<% end %>
+									<% end %>
+								</div>
+							</div>
+						</div>
+					</div>
+				<% end %>
 			</div>
 		</div>
 	</div>
