snazzy dropdown menu :)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,6 +82,15 @@
 								</li>
 
 								<li class="divider"></li>
+								<li class="dropdown-header">SETTINGS</li>
+								<li>
+									<%= link_to 'Edit Profile', settings_profile_path %>
+								</li>
+								<li>
+									<%= link_to 'Edit Sessions', settings_session_path %>
+								</li>
+
+								<li class="divider"></li>
 								<li>
 									<%= link_to 'Sign Out', user_signout_path %>
 								</li>
