page title typo

--- a/app/views/user/settings/session/index.html.erb
+++ b/app/views/user/settings/session/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :user, true %>
-<% content_for :title, "Settings - Your " %>	
+<% content_for :title, "Settings - Your Sessions" %>	
 <% content_for :has_footer, true %>
 <% content_for :setting_active, 'session' %>
 <% content_for :scripts do %>
