fixed rails being a fucking stupid piece of shit language fuck shit fuck fuck fuck dhh. oh and tabs

--- a/app/views/user/account/partials/_header.html.erb
+++ b/app/views/user/account/partials/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="bs-header account-header" id="content">
 	<div class="container">
-		<h1>Xerax</h1>
+		<h1><%= @account.username %></h1>
 		<p>Member Since 18/08/1994</p>
 		<ul>
 			<li><span class="label label-success">Developer</span></li>
